<resources>
    <string name="app_name">TrocaDeItens</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="editar">Editar</string>
    <string name="sair">Sair</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="deletar_usu_rio">Deletar Usuário</string>
    <string name="senha">Senha</string>
    <string name="nova_senha">Nova Senha</string>
</resources>