<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Editar_Perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Editar Perfil"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/Editar_Perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="#1E1E1E"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/userImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />


        <EditText
            android:id="@+id/passwordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nova_senha"
            android:inputType="textPassword"
            android:textColor="#1E1E1E"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/nameView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />


        <Button
            android:id="@+id/btnConfirmChanges"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/confirmar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="5sp"
            app:layout_constraintTop_toBottomOf="@id/passwordView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btnCancelChanges"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/cancelar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="5sp"
            app:layout_constraintTop_toBottomOf="@id/btnConfirmChanges"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnDeletUser"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/deletar_usu_rio"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="5sp"
            app:layout_constraintTop_toBottomOf="@id/btnCancelChanges"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>